--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.65",
+    "@types/node": "^20.10.3",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "react": "^18.2.0",
@@ -19,12 +19,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "storybook": "storybook dev -p 6006"
   },
   "eslintConfig": {
     "extends": [
@@ -54,9 +52,12 @@
     "@storybook/react": "^7.5.3",
     "@storybook/react-webpack5": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "@vitejs/plugin-react": "^4.2.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
     "storybook": "^7.5.3",
+    "vite": "^5.0.4",
+    "vite-plugin-svgr": "^4.2.0",
     "webpack": "^5.89.0"
   }
 }
