--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@storybook/testing-library": "^0.2.2",
     "@vitejs/plugin-react": "^4.2.0",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "eslint": "^8.55.0",
+    "eslint-config-react-app": "^7.0.1",
     "prop-types": "^15.8.1",
     "storybook": "^7.5.3",
     "vite": "^5.0.4",
