--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^27.5.2",
     "axios": "^1.6.2",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
