Feat:유저 정보 api 연결로 Auth HOC 처리

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -11,7 +11,7 @@ COPY .yarnrc.yml                  ./
 COPY .yarn                        ./.yarn
 
 # Installs all node packages
-RUN yarn install --immutable
+RUN yarn
 
 # Copies everything over to Docker environment
 COPY . .
