--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       # 도커 이미지에 env 파일 포함 
       - name: Create .env file
         run: |
-          echo "VITE_SERVER_API=${{ secrets.VITE_SERVER_API }}" >> .env
+          echo "VITE_SERVER_API=${{ secrets.VITE_SERVER_API }}" >> ./.env
 
       # 도커 메타
       - name: Docker meta
