--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.1",
     "styled-reset": "^4.5.1",
     "typescript": "^4.9.5",
